--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ly-item</module>
         <module>ly-registry</module>
         <module>ly-common</module>
+        <module>ly-upload</module>
     </modules>
     <packaging>pom</packaging>
 
