--- a/ly-upload/pom.xml
+++ b/ly-upload/pom.xml
@@ -31,6 +31,10 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+        </dependency>
     </dependencies>
 
 
