2019/03/31  22:23 图片上传也已经实现,但是保存的时候出现问题500，现在还没开始调试

--- a/ly-upload/src/main/resources/application.yml
+++ b/ly-upload/src/main/resources/application.yml
@@ -26,3 +26,11 @@ fdfs:
   tracker-list: # tracker地址
    - 192.168.136.128:22122
 
+ly:
+  upload:
+    baseUrl:http://image.leyou.com/
+  allowType:
+    -image/png
+    -image/jpeg
+    -image/bmp
+    -image/jpg
